--- a/css/kasper.css
+++ b/css/kasper.css
@@ -195,13 +195,18 @@ nav .form i {
 }
 /* Start Landing */
 .landing {
-  min-height: 100vh;
+  height: 100vh;
   background-color: #1f2021;
-  background-image: url("../images/owl_is_standing_on_tree_branch_in_blue_sky_background_hd_owl.jpg");
-  background-size: cover;
   position: relative;
+  overflow: hidden;
 }
-
+.landing .images {
+  display: flex;
+  transition: 0.5s ease-in;
+}
+.landing img {
+  max-width: 100vw;
+}
 .landing .overlay {
   position: absolute;
   top: 0;
@@ -249,6 +254,8 @@ nav .form i {
   left: 0;
   margin-left: 30px;
   font-size: 25px;
+  cursor: pointer;
+  z-index: 3;
 }
 .landing .icons .RightArrow {
   color: white;
@@ -258,6 +265,8 @@ nav .form i {
   right: 0;
   margin-right: 30px;
   font-size: 25px;
+  z-index: 3;
+  cursor: pointer;
 }
 @media (max-width: 768px) {
   .landing .icons i {
@@ -271,6 +280,7 @@ nav .form i {
   top: 95%;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 4;
 }
 .landing .icons .circleIcons div {
   border: 1px solid white;
@@ -278,6 +288,7 @@ nav .form i {
   width: 18px;
   border-radius: 50%;
   margin-right: 10px;
+  cursor: pointer;
 }
 .landing .icons .circleIcons .active {
   background-color: var(--main-color);
@@ -498,6 +509,7 @@ nav .form i {
   width: fit-content;
   margin: 30px auto 0;
   text-transform: uppercase;
+  cursor: pointer;
 }
 /* End Video */
 /* Start About */
