--- a/css/kasper.css
+++ b/css/kasper.css
@@ -654,7 +654,7 @@ nav .form i {
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 50px;
-  font-weight: 40px;
+  font-size: 40px;
   font-weight: normal;
 }
 .allSkills .container > div > p {
